--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,62 @@
-*.iml
-.gradle
+
+# Android Studio
+.gradle/
+.idea/
+build/
+captures/
+.externalNativeBuild/
+.cxx/
+
+# Gradle
+.gradle/
+build/
+*/build/
+gradle-app.setting
+
+# Android specific files
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
+/.cxx/
+*.iml
+*.apk
+*.ap_
+*.dex
+*.class
+
+# Other generated files
+gen/
+bin/
+.libs/
+.libs/
+*.so
+*.jar
+
+# Signing keys
+*.jks
+*.keystore
+
+# Proguard
+proguard/
+
+# IntelliJ IDEA
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/gradle.xml
+.idea/vcs.xml
+.idea/modules
+.idea/shelf
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+
+# Log files
+*.log
+*.stacktrace
+
